2014-10-27  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14138]
	* sysdeps/unix/sysv/linux/arm/setfsgid.c: Remove file.
	* sysdeps/unix/sysv/linux/arm/setfsuid.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/setfsgid.c: Likewise.
	* sysdeps/unix/sysv/linux/i386/setfsuid.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/setfsgid.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/setfsuid.c: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/setfsgid.c: Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/setfsuid.c: Likewise.
	* sysdeps/unix/sysv/linux/sh/setfsgid.c: Likewise.
	* sysdeps/unix/sysv/linux/sh/setfsuid.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/setfsgid.c: Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/setfsuid.c: Likewise.
	* sysdeps/unix/sysv/linux/arm/syscalls.list (setfsgid): Add
	syscall.
	(setfsuid): Likewise.
	* sysdeps/unix/sysv/linux/i386/syscalls.list (setfsgid): Likewise.
	(setfsuid): Likewise.
	* sysdeps/unix/sysv/linux/m68k/syscalls.list (setfsgid): Likewise.
	(setfsuid): Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-32/syscalls.list (setfsgid):
	Likewise.
	(setfsuid): Likewise.
	* sysdeps/unix/sysv/linux/sh/syscalls.list (setfsgid): Likewise.
	(setfsuid): Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/syscalls.list (setfsgid):
	Likewise.
	(setfsuid): Likewise.

2014-10-27  Andreas Schwab  <schwab@suse.de>

	[BZ #17501]
	* sysdeps/i386/i686/multiarch/strcasecmp.S (__strcasecmp): Fix
	check for Slow_SSE4_2 feature bit.
	* sysdeps/i386/i686/multiarch/strcmp.S (STRCMP): Likewise.
	* sysdeps/i386/i686/multiarch/strncase.S (__strncasecmp): Likewise.
	* sysdeps/x86_64/multiarch/strcmp.S (STRCMP, __strcascmp):
	Likewise.  Fix check for Fast_Unaligned_Load feature bit.

2014-10-24  Roland McGrath  <roland@hack.frob.com>

	* configure.ac: Validate compiler version with a empirical test of
	__GNUC__ and __GNUC_MINOR__ predefined values, rather than by grepping
	$CC -v output.
	* configure: Regenerated.

	* inet/htons.c (htons): Prototypify.