@@ -1,3 +1,13 @@
+2014-10-27  Gratian Crisan  <gratian.crisan@ni.com>
+
+	* sysdeps/unix/sysv/linux/arm/kernel-features.h
+	[__LINUX_KERNEL_VERSION >= 0x030E03] (__ASSUME_FUTEX_LOCK_PI): Do
+	not undefine.
+	[__LINUX_KERNEL_VERSION >= 0x030E03] (__ASSUME_REQUEUE_PI):
+	Likewise.
+	[__LINUX_KERNEL_VERSION >= 0x030E03] (__ASSUME_SET_ROBUST_LIST):
+	Likewise.
+
 2014-10-27  Joseph Myers  <joseph@codesourcery.com>
 
 	[BZ #14138]
